@@ -1,5 +1,5 @@
-gtkvncviewer (0.2.3-1) unstable; urgency=low
+gtkvncviewer (0.2.4) unstable; urgency=low
 
-  * First Debian package. Closes: #480055.
+  * New upstream release. Closes: #xxxxxx.
 
- -- Clement Lorteau <northern_lights@users.sourceforge.net>  Sat, 10 May 2008 10:33:37 +0200
+ -- Clement Lorteau <northern_lights@users.sourceforge.net>  Mon, 12 May 2008 14:41:41 +0200
