@@ -1,5 +1,5 @@
-gtkvncviewer (0.2.3-0ubuntu1~ppa1) hardy; urgency=low
+gtkvncviewer (0.2.4-0ubuntu1~ppa1) hardy; urgency=low
 
-  * First Ubuntu package.
+  * New upstream release.
 
- -- Clement Lorteau <northern_lights@users.sourceforge.net>  Sat, 10 May 2008 10:33:37 +0200
+ -- Clement Lorteau <northern_lights@users.sourceforge.net>  Mon, 12 May 2008 14:41:41 +0200
