@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.2 on Sun Apr 13 10:27:29 2008 -->
+<!--Generated with glade3 3.4.2 on Mon May 12 14:19:25 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="connectDialog">
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
@@ -345,7 +345,7 @@
     <property name="version">0.2.3</property>
     <property name="copyright">(c) 2008 Clément Lorteau</property>
     <property name="comments" translatable="yes">Small GTK tool to connect to VNC servers.</property>
-    <property name="website">https://launchpad.net/gtkvncviewer</property>
+    <property name="website">http://launchpad.net/gtkvncviewer</property>
     <property name="website_label" translatable="yes">Visit website</property>
     <property name="license">		    GNU GENERAL PUBLIC LICENSE
 		       Version 2, June 1991
