@@ -1,3 +1,4 @@
 #!/bin/sh
+
 cd /usr/share/gtkvncviewer
-./gtkvncviewer.py
+./gtkvncviewer.py $@
