@@ -1,8 +1,14 @@
 .TH "GTK VNC Viewer" 1
 .SH NAME
 gtkvncviewer \- Simple GTK+ tool to connect to VNC servers
-.SH SYNOPSIS
-.B gtkvncviewer
+.SH OPTIONS
+.TP
+\fB\-h\fR, \fB\-\-help\fR
+show this help message and exit
+.TP
+\fB\-s\fR server, \fB\-\-server\fR=\fIserver\fR
+if server is known by gtkvncviewer, immediately
+connect to it
 .SH DESCRIPTION
 GTK VNC Viewer is a script that provides a GUI for connecting to VNC servers. It remembers the credentials of known servers, so connecting to a VNC server is just one double-click away. Servers are shown in an icon view.
 .SH AUTHOR
